
  [ gregor herrmann ]
  * Add libtie-ixhash-perl to Build-Depends-Indep and Depends.
  * Create symlinks /usr/bin/cpan2deb -> dh-make-perl and
    /usr/share/man/man1/cpan2deb.1p.gz -> dh-make-perl.1p.gz.
  * "--exclude": use default values from Dpkg::Source::Package instead of
    maintaining our own list; if invoked without arguments use default values
    again.

 -- Damyan Ivanov <dmn@debian.org>  Fri, 09 Jan 2009 11:38:50 +0200

dh-make-perl (0.51) unstable; urgency=low

  [ gregor herrmann ]
  * Handle --desc option before --refresh to avoid uninitialized $desc
    variable.
  * Remove libpod-parser-perl from Depends, sync Build-Depends-Indep with
    Depends now that tests are run.
  * "--build": call `debian/rules build' before `fakeroot debian/rules binary'
    in order to do the build without (fake)root privileges. Thanks to Mark
    Hedges for the bug report and to Russ Allbery for the solution
    (closes: #510362).

  [ Damyan Ivanov ]
  * Apply two patches from Paul Fenwick reformatting the whitespace of
    dh-make-perl. Hopefully this makes the code a bit easier for people not
    used to it.
  * Add Paul Fenwick to the 'Patches from' section
  * Parse and use build-time dependencies too
    Closes: #501688 -- dh-make-perl ignoring build_requires in Makefile.PL
  * Add dependencies on libwww-mechanize-perl, libclass-accessor-perl,
    libemail-date-format-perl, libmodule-corelist-perl, libapt-pkg-perl.
  * Internal rewrites:
    - encapsulate dependencies into a class and rework the code to use it
    - extract_depends: try Module::Depends first, ::Intrusive -- second
    - use Module::CoreList to check if given module is a core one
    - avoid adding dependencies on ancient perl versions
  * add test suite
  * rules: run the test suite during build
    + sync B-D-I with Depends
    + add libfile-touch-perl, libtext-diff-perl, libfile-find-rule-perl and
      libtest-deep-perl to B-D-I